--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       crossorigin
     ></script>
     <script
+      src="https://bootswatch.com/4/minty/bootstrap.min.css"
+      crossorigin
+    ></script>
+    <script
       src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
       crossorigin
     ></script>
