--- a/public/index.html
+++ b/public/index.html
@@ -46,30 +46,12 @@
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      (function (t, a, l, k, j, s) {
-        s = a.createElement("script");
-        s.async = 1;
-        s.src = "https://cdn.talkjs.com/talk.js";
-        a.head.appendChild(s);
-        k = t.Promise;
-        t.Talk = {
-          v: 2,
-          ready: {
-            then: function (f) {
-              if (k)
-                return new k(function (r, e) {
-                  l.push([f, r, e]);
-                });
-              l.push([f]);
-            },
-            catch: function () {
-              return k && new k();
-            },
-            c: l,
-          },
-        };
-      })(window, document, []);
+    
     </script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
   </body>
 </html>
